--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
         </section>
 
         <section data-vertical-align-top
-          data-background-iframe="https://github.com/neuroneural/brainchop/releases/download/v4.1.0/Brainchop_overhaul.mp4">
+          data-background-video="https://github.com/neuroneural/brainchop/releases/download/v4.1.0/Brainchop_overhaul.mp4"
+          data-background-video-loop data-background-video-muted>
           <img style="border:0; box-shadow: 0px 10px 10px
                                     rgba(150, 150, 150,
                                     0.8);" width="70%" class="fragment zoom-in" src="figures/brainchop_interface.svg"
