Fix: Enable sound for background video

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
         <section data-vertical-align-top
           data-background-video="https://github.com/neuroneural/brainchop/releases/download/v4.1.0/Brainchop_overhaul.mp4"
-          data-background-video-loop data-background-video-muted>
+          data-background-video-loop>
           <img style="border:0; box-shadow: 0px 10px 10px
                                     rgba(150, 150, 150,
                                     0.8);" width="70%" class="fragment zoom-in" src="figures/brainchop_interface.svg"
