--- a/index.html
+++ b/index.html
@@ -75,17 +75,36 @@
         </section>
         <section data-background="figures/automation.jpg" data-vertical-align-top>
           <h2>The Age of AI</h2>
+          <img class="fragment" src="figures/time_person_of_the_year.jpeg" alt="TIME Person of the Year"
+            style="position: fixed; bottom: 5%; left: 2%; height: 39vh; width: auto; border: 0; box-shadow: 0px 5px 15px rgba(0,0,0,0.5); transform: translate(-30%, 15%);">
         </section>
         <section>
-          <h2>publications, models, tools</h2>
-          <h3 class="fragment">Abundance, scarcity, absence</h3>
+          <div style="display: flex; justify-content: center; gap: 80px; margin-top: 80px;">
+            <div style="text-align: center; min-width: 180px;">
+              <h2 class="fragment" data-fragment-index="0" style="margin: 0;">Publications</h2>
+              <h3 class="fragment" data-fragment-index="3" style="color: #2aa198; margin-top: 30px;">Abundance</h3>
+            </div>
+            <div style="text-align: center; min-width: 180px;">
+              <h2 class="fragment" data-fragment-index="1" style="margin: 0;">Models</h2>
+              <h3 class="fragment" data-fragment-index="4" style="color: #cb4b16; margin-top: 30px;">Scarcity</h3>
+            </div>
+            <div style="text-align: center; min-width: 180px;">
+              <h2 class="fragment" data-fragment-index="2" style="margin: 0;">Tools</h2>
+              <h3 class="fragment" data-fragment-index="5" style="color: #dc322f; margin-top: 30px;">Absence</h3>
+            </div>
+          </div>
 
-          <blockquote style="background-color: #93a1a1; color: #fdf6e3; font-size: 36px; width: 100%;" class="fragment">
-            Only 40% of radiology AI studies shared models; deep learning models showed the lowest availability (11.5%)
+          <blockquote
+            style="background-color: #93a1a1; color: #fdf6e3; font-size: 36px; width: 100%; margin-top: 60px; text-align: left;"
+            class="fragment" data-fragment-index="6">
+            Only 40% of radiology AI studies shared models;<br>
+            deep learning models showed the lowest availability (11.5%)
           </blockquote>
           <div class="slide-footer">
-            Lee, T., Lee, J.H., Yoon, S.H., Park, S.H. and Kim, H., 2025. Availability and transparency of artificial
-            intelligence models in radiology: a meta-research study. European Radiology, pp.1-12.
+            Lee, T., Lee, J.H., Yoon, S.H., Park, S.H. and Kim, H., 2025. <a
+              href="https://pmc.ncbi.nlm.nih.gov/articles/PMC12350510/" target="_blank">Availability and transparency of
+              artificial
+              intelligence models in radiology: a meta-research study.</a> European Radiology, pp.1-12.
           </div>
         </section>
         <section>
@@ -104,8 +123,10 @@
             </col50>
           </row>
           <div class="slide-footer">
-            Lee, T., Lee, J.H., Yoon, S.H., Park, S.H. and Kim, H., 2025. Availability and transparency of artificial
-            intelligence models in radiology: a meta-research study. European Radiology, pp.1-12.
+            Lee, T., Lee, J.H., Yoon, S.H., Park, S.H. and Kim, H., 2025. <a
+              href="https://pmc.ncbi.nlm.nih.gov/articles/PMC12350510/" target="_blank">Availability and
+              transparency of artificial
+              intelligence models in radiology: a meta-research study.</a> European Radiology, pp.1-12.
           </div>
         </section>
         <section>
@@ -129,7 +150,7 @@
           </row>
         </section>
         <section>
-          <h3>Privacy does matter</h3>
+          <h2>Privacy does matter</h2>
           <row>
             <col50>
               <ul style="font-size: 32px;">
@@ -144,9 +165,15 @@
             <col50>
               <img style="border:0; box-shadow: 0px 10px 10px
                                     rgba(150, 150, 150,
-                                    0.8);" width="100%" src="figures/Richard_Stallman_St.jpg" alt="github stars">
+                                    0.8);" width="100%" src="figures/Richard_Stallman_St.jpg" alt="Richard Stallman">
+              <div style="font-size: 14px; margin-top: -5px; text-align: center;">Richard Stallman, founder of the Free
+                Software Foundation</div>
             </col50>
           </row>
+        </section>
+        <section data-background="figures/sovereignty_transparent.png" data-background-size="cover"
+          data-vertical-align-top>
+          <h2 style="margin-top:-50px">Sovereignty</h2>
         </section>
         <section>
 
@@ -163,7 +190,7 @@
 
 
           <div class="slide-footer">
-            https://xkcd.com/2501/
+            <a href="https://xkcd.com/2501/" target="_blank">https://xkcd.com/2501/</a>
           </div>
         </section>
         <section>
@@ -171,12 +198,13 @@
           <ul>
             <li class="fragment roll-in"> AI models with top performance for regular users
             <li class="fragment roll-in"> w/ Minimal (preferably zero) installation burden
+            <li class="fragment roll-in"> Fast, personalized interactive models!
           </ul>
         </section>
       </section>
       <section>
         <section>
-          <h1>Brainchop.org</h1>
+          <h1><a href="https://neuroneural.net/brainchop-test/" target="_blank">Brainchop.org</a></h1>
         </section>
         <section data-background-iframe="figures/brainchop13_short.mp4">
         </section>
@@ -221,7 +249,7 @@
         </section>
 
         <section>
-          <a href="https://brainchop.org">brainchop.org</a>
+          <a href="https://neuroneural.net/brainchop-test/">brainchop.org</a>
         </section>
       </section>
       <section>
@@ -414,7 +442,7 @@
           <h1>other Applications</h1>
         </section>
         <section data-vertical-align-top>
-          <div id="header-right" style="margin-right: -130px; margin-top: 100px">
+          <div id="header-right" style="margin-right: -100px; margin-top: 100px">
             <img src="figures/Armina.png" alt="Armina Fani"
               style="border:0; box-shadow: 0px 0px 0px rgba(150, 150, 255, 1); margin-bottom: -5%" width="160px">
             <div style="font-size:10pt;">Armina Fani</div>
@@ -428,6 +456,34 @@
             src="figures/mindgrab_simplified.png" alt="loop">
         </section>
 
+        <section data-vertical-align-top>
+          <h2>MINDGRAB (DICE-DIVE)</h2>
+          <div class="center">
+            <img style="border:0; box-shadow: 0px 10px 10px rgba(150, 150, 150, 0.8);" width="80%"
+              src="figures/dice_mindgrab.png" alt="Mindgrab Dice">
+          </div>
+        </section>
+
+        <section data-vertical-align-top>
+          <h2 style="margin-top:-50px;">MINDGRAB (EFFICIENCY)</h2>
+          <div class="center">
+            <img style="border:0; box-shadow: 0px 10px 10px rgba(150, 150, 150, 0.8); margin-top:-30px;" width="80%"
+              src="figures/speed_mindgrab.png" alt="Mindgrab Efficiency">
+          </div>
+        </section>
+
+        <section data-vertical-align-top>
+          <h2 style="margin-top:-50px;">MINDGRAB (PERFORMANCE)</h2>
+          <div style="display: flex; justify-content: center; gap: 20px; align-items: center; margin-top:-30px;">
+            <img class="fragment"
+              style="border:0; box-shadow: 0px 10px 10px rgba(150, 150, 150, 0.8); height: 550px; width: auto;"
+              src="figures/contours_mindgrab.png" alt="Mindgrab Contours">
+            <img class="fragment"
+              style="border:0; box-shadow: 0px 10px 10px rgba(150, 150, 150, 0.8); height: 550px; width: auto;"
+              src="figures/errors_mindgrab.png" alt="Mindgrab Errors">
+          </div>
+        </section>
+
         <section>
           <div id="header-right" style="margin-right: -100px; margin-top: 100px">
             <img src="figures/AlexFedorovEmory.png" alt="Alex Fedorov"
@@ -437,10 +493,23 @@
           <h3>Tumor Detection</h3>
           <img class="stretch" style="border:0; box-shadow: 0px 0px 0px rgba(150, 150, 255, 0.8);" width="160%"
             src="figures/pareto_front_winning.png" alt="loop">
+          <div class="slide-footer" style="bottom: -45px;">
+            Fedorov, A., Bu, Y., Hu, X., Rorden, C. and Plis, S., 2025, April. <a
+              href="https://ieeexplore.ieee.org/abstract/document/10981054" target="_blank">State-of-the-Art Stroke
+              Lesion Segmentation at 1/1000th of Parameters.</a> In 2025 IEEE 22nd International Symposium on Biomedical
+            Imaging (ISBI) (pp. 1-5). IEEE.
+          </div>
         </section>
 
         <section>
-          <h3>Other models (possibly)?</h3>
+          <h1><a href="https://brain2print.org/" target="_blank">brain2print</a></h1>
+        </section>
+
+        <section data-background-video="figures/brains2print.mp4" data-background-video-loop>
+        </section>
+
+        <section>
+          <h3>Other models (<a href="https://neuroneural.net/brainchop-test/" target="_blank">possibly</a>)?</h3>
         </section>
         <section>
           <h4>The browser is not forgiving, but MeshNet is easy to train</h4>
@@ -469,15 +538,16 @@
         <section>
           <h4>software is also becoming better: the upcoming WebGPU standard</h4>
         </section>
-        <section data-vertical-align-top data-background-iframe="http://neuroneural.net/brainchop-test/"
+        <section data-vertical-align-top data-background-iframe="https://neuroneural.net/brainchop-test/"
           data-background-interactive>
           <h3 style="text-shadow: 4px 4px 4px #002b36; color: #93a1a1">upcoming WebGPU</h3>
         </section>
 
-        <section data-vertical-align-top data-background-iframe="https://brainchop.org" data-background-interactive>
+        <section data-vertical-align-top data-background-iframe="https://neuroneural.net/brainchop-test/"
+          data-background-interactive>
           <h3 style="text-shadow: 4px 4px 4px #002b36; color: #93a1a1">Interactive demo</h3>
           <div class='slide-footer'>
-            <a href="https://brainchop.org">brainchop.org</a><br>
+            <a href="https://neuroneural.net/brainchop-test/">brainchop.org</a><br>
             <a href="https://github.com/neuroneural/brainchop">https://github.com/neuroneural/brainchop <i
                 class="fab fa-github"></i></a>
           </div>
@@ -521,7 +591,7 @@
 
       overview: true,
       transition: 'slide', // Transition style: none/fade/slide/convex/concave/zoom
-      transitionSpeed: 'slow', // Transition speed: default/fast/slow
+      transitionSpeed: 'fast', // Transition speed: default/fast/slow
       menu: {
         themes: false,
         openSlideNumber: true,
